# some-webapp

./: .gitignore  README.md  compose.yaml  postgres.yaml
backend/: .env  Cargo.toml  Dockerfile
backend/db-interface/: Cargo.toml
backend/db-interface/src/: lib.rs  statics.rs
backend/db-interface/src/database/: message_to_world.rs  mod.rs
backend/main-api/: .env  Cargo.toml
backend/main-api/.sqlx/: query-313c0be3e0d91407b46199de32161bd983a922dde0af7bf8b1483db2805a557a.json
backend/main-api/src/: ctx.rs  error.rs  main.rs  model.rs
backend/main-api/src/model/: message.rs
backend/main-api/src/models/: message.rs
backend/main-api/src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_messages.rs
backend/main-api/tests/: quicktests.rs
backend/migrations/: 0001_messsage_table.sql
ci-cd/: Cargo.toml  README.md
ci-cd/src/: main.rs  webhook_notifier.rs
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/app/: button.tsx  layout.tsx  page.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AddMessageForm.tsx  HeaderBar.module.css  HeaderBar.tsx
frontend/src/components/messages/: AddMessageForm.tsx  MessageDisplay.tsx
frontend/src/pages/: home.tsx
frontend/src/pages/api/: [...proxy].tsx
