[package]
name = "github-webhook-reciever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
serde = {version="1.0.195", features=["derive"]}
serde_json = "1.0.111"
serenity = {version="0.12.0", features = ["rustls_backend", "model"]}
tokio = { version = "1.35.1", features = ["full"] }
wait-timeout = "0.2.0"
