[package]
name = "db-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
lazy_static = "1.4.0"
sqlx = {version="0.7.3", features = ["postgres", "runtime-tokio-rustls"]}
tokio = "1.35.1"
